# getopt-generics

./: .ghci  .travis.yml  README.md  Setup.hs  args-generics.cabal  buildDocs.hs  getopt-generic.cabal  getopt-generics.cabal  package.yaml  package.yml  stack-generics-sop-0.5.0.0.yaml  stack-ghc-7.10.yaml  stack-ghc-7.8.yaml  stack-ghc-8.10.yaml  stack-ghc-8.2.yaml  stack-ghc-8.4.yaml  stack-ghc-8.6.yaml  stack-ghc-8.8.yaml  stack.yaml
.github/workflows/: ci.yaml
docs/: CustomOption.hs  CustomOption.shell-protocol  CustomOptionRecord.hs  CustomOptionRecord.shell-protocol  CustomOptionsExample.bash-protocol  CustomOptionsExample.hs  Example.hs  RecordType.hs  RecordType.shell-protocol  RecordTypeExample.bash-protocol  RecordTypeExample.hs  Simple.hs  Simple.shell-protocol  SimpleExample.bash-protocol  SimpleExample.hs  SimpleRecord.hs  Test01.hs  Test01.shell-protocol  Test02.hs  Test02.shell-protocol  Test03.hs  Test04.hs  Test04.shell-protocol
example/: example.hs
examples/: Example.hs
src/: Example.hs  Opt.hs  SimpleCLI.hs  WithCli.hs
src/SimpleCLI/: FromArguments.hs  HasOptions.hs  HelpFlag.hs  Option.hs  Result.hs
src/System/Console/Args/: Generics.hs
src/System/Console/GetOpt/: Generics.hs
src/System/Console/GetOpt/Generics/: FieldString.hs  GetArguments.hs  Hint.hs  Internal.hs  Modifier.hs  Result.hs  Simple.hs
src/System/Console/GetOpt/Generics/Modifier/: Types.hs
src/WithCli/: Argument.hs  Flag.hs  FromArguments.hs  HasArguments.hs  HasOptions.hs  HelpFlag.hs  Modifier.hs  Normalize.hs  Option.hs  Parser.hs  Pure.hs  Result.hs
src/WithCli/Modifier/: Types.hs
src/WithCli/Pure/: Internal.hs
test/: BashProtocol.hs  DocsSpec.hs  Examples.hs  ExamplesSpec.hs  ModifiersSpec.hs  OptSpec.hs  ShellProtocol.hs  SimpleCLISpec.hs  Util.hs  WithCliSpec.hs
test/ModifiersSpec/: RenameOptionsSpec.hs  UseForPositionalArgumentsSpec.hs
test/SimpleCLI/: GetOptsSpec.hs  ResultSpec.hs
test/System/Console/Args/: GenericsSpec.hs
test/System/Console/GetOpt/: GenericsSpec.hs
test/System/Console/GetOpt/Generics/: FieldStringSpec.hs  HintSpec.hs  InternalSpec.hs  ModifierSpec.hs  ResultSpec.hs  SimpleSpec.hs
test/WithCli/: ArgumentSpec.hs  GetOptsSpec.hs  HasArgumentsSpec.hs  ModifierSpec.hs  NormalizeSpec.hs  ParserSpec.hs  PureSpec.hs  ResultSpec.hs
test/WithCli/Pure/: RecordSpec.hs
