name: args-generics
version: 0.1
cabal-version: >= 1.2
license: BSD3
license-file: LICENSE
author: Linh Nguyen, Sönke Hahn
copyright: Zalora South East Asia Pte Ltd
maintainer: linh.nguyen@zalora.com, soenke.hahn@zalora.com
build-type: Simple

library
  hs-source-dirs:
    src
  ghc-options:
    -Wall -threaded -fno-warn-name-shadowing
  build-depends:
      base == 4.*
    , generics-sop
    , optparse-applicative

test-suite spec
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    src, test
  ghc-options:
    -Wall -threaded -fno-warn-name-shadowing -O0
  main-is:
    Spec.hs
  build-depends:
      base == 4.*
    , generics-sop
    , optparse-applicative

    , hspec
    , silently
