name: getopt-generics
version: 0.1.1
category: Console, System
synopsis: Simple command line argument parsing
description:
  "getopt-generics" tries to make it very simple to create command line argument
  parsers. Documentation can be found in the
  <https://github.com/zalora/getopt-generics#getopt-generics README>.
license: BSD3
license-file: LICENSE
author: Linh Nguyen, Sönke Hahn
copyright: Zalora South East Asia Pte Ltd
maintainer: linh.nguyen@zalora.com, soenke.hahn@zalora.com

cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs:
    src
  ghc-options:
    -Wall -fno-warn-name-shadowing
  exposed-modules:
    System.Console.GetOpt.Generics
  build-depends:
      base == 4.*
    , generics-sop
    , safe

test-suite spec
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test, examples
  ghc-options:
    -Wall -threaded -fno-warn-name-shadowing -O0 -pgmL markdown-unlit
  main-is:
    Spec.hs
  build-depends:
      base == 4.*
    , getopt-generics
    , generics-sop

    , hspec
    , silently

source-repository head
  type:     git
  location: git://github.com/zalora/getopt-generics
